@@ -1,5 +1,6 @@
 # Unreleased
 
+- Re-export `typing.Unpack` and `typing.TypeVarTuple` on Python 3.11.
 - Add `ParamSpecArgs` and `ParamSpecKwargs` to `__all__`.
 - Improve "accepts only single type" error messages.
 - Improve the distributed package. Patch by Marc Mueller (@cdce8p).
